axum-macros/tests/from_request/fail/unknown_attr_container.stderr
error: expected one of: `via`, `rejection`, `state`
 --> tests/from_request/fail/unknown_attr_container.rs:4:16
  |
4 | #[from_request(foo)]
  |                ^^^
